--- a/views/adminViewDoctor.ejs
+++ b/views/adminViewDoctor.ejs
@@ -206,6 +206,7 @@
         <% } else { %>
           <p>No profile picture available</p>
         <% } %>
+
         <p><strong>Name:</strong> <%= doctor.name %></p>
         <p><strong>Email:</strong> <%= doctor.email %></p>
         <p><strong>Title:</strong> <%= doctor.title %></p>
@@ -213,24 +214,39 @@
         <p><strong>Location:</strong> <%= doctor.location %></p>
         <p><strong>Gender:</strong> <%= doctor.gender %></p>
         <p><strong>Website:</strong> <a href="<%= doctor.website %>" target="_blank"><%= doctor.website %></a></p>
-        <h3>Social Media Handles</h3>
-        <ul>
-          <% if (doctor.socialHandles && doctor.socialHandles.twitter) { %>
-            <li><a href="<%= doctor.socialHandles.twitter %>" target="_blank">Twitter</a></li>
-          <% } %>
-          <% if (doctor.socialHandles && doctor.socialHandles.facebook) { %>
-            <li><a href="<%= doctor.socialHandles.facebook %>" target="_blank">Facebook</a></li>
-          <% } %>
-          <% if (doctor.socialHandles && doctor.socialHandles.linkedin) { %>
-            <li><a href="<%= doctor.socialHandles.linkedin %>" target="_blank">LinkedIn</a></li>
-          <% } %>
-          <% if (doctor.socialHandles && doctor.socialHandles.instagram) { %>
-            <li><a href="<%= doctor.socialHandles.instagram %>" target="_blank">Instagram</a></li>
-          <% } %>
-        </ul>
+
+        <h3>Proof Documents</h3>
+<% if (doctor.documents && doctor.documents.licenseProof && doctor.documents.licenseProof.data) { %>
+  <div>
+    <h4>License Proof</h4>
+    <img src="data:<%= doctor.documents.licenseProof.contentType %>;base64,<%= doctor.documents.licenseProof.data.toString('base64') %>" alt="License Proof" style="width: 300px; height: auto;">
+  </div>
+<% } else { %>
+  <p>No license proof available</p>
+<% } %>
+
+<% if (doctor.documents && doctor.documents.certificationProof && doctor.documents.certificationProof.data) { %>
+  <div>
+    <h4>Certification Proof</h4>
+    <img src="data:<%= doctor.documents.certificationProof.contentType %>;base64,<%= doctor.documents.certificationProof.data.toString('base64') %>" alt="Certification Proof" style="width: 300px; height: auto;">
+  </div>
+<% } else { %>
+  <p>No certification proof available</p>
+<% } %>
+
+<% if (doctor.documents && doctor.documents.businessProof && doctor.documents.businessProof.data) { %>
+  <div>
+    <h4>Business Proof</h4>
+    <img src="data:<%= doctor.documents.businessProof.contentType %>;base64,<%= doctor.documents.businessProof.data.toString('base64') %>" alt="Business Proof" style="width: 300px; height: auto;">
+  </div>
+<% } else { %>
+  <p>No business proof available</p>
+<% } %>
+
         <h3>Subscription Details</h3>
         <p><strong>Subscription Type:</strong> <%= doctor.subscriptionType %></p>
         <p><strong>Subscription Verification:</strong> <%= doctor.subscriptionVerification %></p>
+
         <h3>Languages Spoken</h3>
         <% if (doctor.languages.length > 0) { %>
           <ul>
@@ -282,7 +298,6 @@
                 </li>
             <% }) %>
         </ul>
-        
 
         <h3>Awards</h3>
         <% if (doctor.awards.length > 0) { %>
@@ -294,6 +309,7 @@
         <% } else { %>
           <p>No awards listed.</p>
         <% } %>
+        
         <h3>FAQs</h3>
         <% if (doctor.faqs.length > 0) { %>
           <ul>
@@ -306,7 +322,6 @@
         <% } %>
 
         <a href="/admin/doctor-profile-requests">Back</a>
-        </form>
       </div>
     </div>
   </div>
