--- a/views/doctorProfileView.ejs
+++ b/views/doctorProfileView.ejs
@@ -156,7 +156,7 @@
 
     <script>
         document.getElementById('bookingForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent the default form submission
+            //event.preventDefault(); // Prevent the default form submission
 
             // Collect form data
             const formData = new FormData(this);
